/* 
  Localizable.strings
  TadeMe

  Created by Inti Albuquerque on 25/01/22.
  
*/
"MyTradeMe" = "My Trade Me";
"Browse" = "Browse";
"Discover" = "Discover";
"Watchlist" = "Watchlist";
"PriceNotAvailable" = "price not available";
"ReserveMet" = "reserve met";
"ReserveNotMet" = "reserve not met";
"BuyNow" = "Buy Now";
"TappedOn" = "Tapped on";
"CartTitle" = "Cart";
"CartMessage" = "You tapped on the cart button";
"SearchTitle" = "Search";
"SearchMessage" = "You tapped on the Search button";
"ErrorTitle" = "Something went wrong";
"ErrorMessage" = "We were unable to fetch the listings";
"InvalidUrlTitle" = "Invalid Url";
"InvalidUrlMessage" = "The Url you are trying to call is not valid";
"Notifications" = "Notifications";
"Askingprice" = "Asking price";
