...
                viewModel.showAlert(type: .cart)
            }) {
                Image(iconName: .cart)
                    .renderingMode(.template)
                    .foregroundColor(.tasman)
            }
            .accessibilityIdentifier("cart")
            
            Button(action: {
                viewModel.showAlert(type: .search)
            }) {
                Image(iconName: .search)
                    .renderingMode(.template)
                    .foregroundColor(.tasman)
            }
            .accessibilityIdentifier("search")
        }
    }
}

struct ListingsView_Previews: PreviewProvider {
    static var previews: some View {
...
